<resources>
    <string name="app_name">4Ease</string>
    <string name="google_maps_api_key">AIzaSyB8XWl_VtyclAWH7VB9VbYwUc1pVCiXR8c</string>
    <string name="title_activity_navdem">navdem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="register_now">Register Now?</string>
    <string name="login">Login</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="upload">Upload</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="choose_file">Choose file</string>
    <string name="rent_office_title">Rent Office Title</string>
    <string name="vehicles">Vehicles</string>
    <string name="bookings">Bookings</string>
    <string name="mehran">Mehran</string>
    <string name="booked_by">Booked By</string>
    <string name="affan">Affan</string>
    <string name="booking_date">Booking Date</string>
    <string name="_12_3_2020">12-3-2020</string>
    <string name="return_date">Return Date</string>
    <string name="not_specified">Not Specified</string>
    <string name="todo">TODO</string>
    <string name="work_in_progress">Work In Progress</string>
    <string name="select_your_starting_location">Select your starting location</string>
    <string name="book">Book</string>
    <string name="date_from">Date From</string>
    <string name="_2000">2000</string>
    <string name="booked_successfully">Booked Successfully</string>
    <string name="paid_cost">Paid Cost:</string>
    <string name="select_rent_house">Select Rent house</string>
    <string name="admin">Admin?</string>
    <string name="customers">Customers</string>
</resources>
