<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyBoard"
    android:background="@drawable/bg_main"
    android:id="@+id/cLLogin"
    tools:context=".login">

    <include
        android:id="@+id/include2"
        layout="@layout/mylogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hideKeyBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:onClick="hideKeyBoard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="hideKeyBoard"
            android:background="@drawable/bg_white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Login"
                android:textColor="@color/light_blue"
                android:textSize="30dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnQR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_blue_shadow"
                android:hint="CNIC"
                android:inputType="phone"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableTint="@color/light_blue"
                android:drawableStart="@drawable/ic_lock_outline_blue_24dp"
                android:drawablePadding="5dp"
                android:hint="Password"
                android:inputType="textPassword"
                tools:ignore="Autofill,HardcodedText" />

            <Button
                android:id="@+id/link_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_blue_shadow"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@color/zxing_transparent"
                    android:gravity="center"
                    android:text="@string/admin"
                    android:layout_weight="1"
                    android:textSize="10sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@color/zxing_transparent"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/link_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:background="@color/zxing_transparent"
                    android:gravity="center"
                    android:text="@string/register_now"
                    android:textSize="10sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/myProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading..." />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/bg_logo"
        android:contentDescription="TODO"
        android:layout_marginLeft="@dimen/fab_margin"
        android:padding="3dp"
        android:src="@drawable/logomini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>